--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "aghiljv",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "lodash": "^4.17.20",
+    "morgan": "^1.10.0"
   }
 }
