--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
-    "lodash": "^4.17.20",
-    "morgan": "^1.10.0"
+    "lodash": "^4.17.20"
   }
 }
